Lab1/src/main/java/Subsection_1_1/WebExercise_3.txt
a. Omitting "main"

Compiler will display an error:

HelloWorld.java:2: error: <identifier> expected
    public static void (String[] args) {
                      ^
1 error

b. Omitting "String"

Compiler returns errors:

HelloWorld.java:2: error: illegal start of type
    public static void main([] args) {
                            ^
HelloWorld.java:2: error: ',', ')', or '[' expected
    public static void main([] args) {
                              ^
2 errors

c. Omitting "HelloWorld"

Compiler returns error:

HelloWorld.java:1: error: <identifier> expected
public class  {
            ^
1 error

d. Omitting "System.out"

Compiler returns error:

HelloWorld.java:3: error: illegal start of expression
        .println("Hello World!");
        ^
1 error

e. Omitting "println"

Compiler returns error:

HelloWorld.java:3: error: <identifier> expected
        System.out.("Hello World!");
                   ^
1 error